# neo-nexus

./: .dockerignore  .gitignore  BRANDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.mjs  install.sh  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
dashboard/: next.config.ts  package.json
docs/: ARCHITECTURE.md  DEPLOY_FRONTEND.md  DEPLOY_INFRASTRUCTURE.md  REMOTE_ACCESS.md  api.md  native-rust.md  native-validation.md  nginx-example.conf  operator-benchmarks.md  runtime-catalog.example.json  snapshot-catalog.example.json  ui-system-redesign-v3.1.md  ui-v3-baseline.md
scripts/: deploy-csharp-plugin.ts  deploy-live-neo-node.ts  deploy-test-node-runtime-csharp.ts  deploy-test-node-runtime.ts  deploy-test-node.ts  deploy-test-plugin-batch.ts  deploy-test-plugin.ts  migrate_god_state.py  run-bootstrap.ts  setup-nginx.sh  setup_k8s.sh  test-hetzner-api.ts
src/: alerts.rs  app.rs  argv.rs  backup.rs  catalog.rs  ci_policy.rs  cli.rs  config.rs  core.rs  dashboard.rs  diagnostics.rs  event_journal_report.rs  events.rs  federation.rs  index.ts  launch.rs  lib.rs  logs.rs  main.rs  manager.rs  metrics.rs  native_ui.rs  node_lifecycle.rs  plugins.rs  port_planner.rs  preflight.rs  private_network.rs  readiness_report.rs  redaction.rs  release_pack.rs  repository.rs  roles.rs  rpc_health.rs  runtime.rs  runtime_smoke.rs  server.ts  snapshots.rs  source_purity.rs  source_quality.rs  supervisor.rs  (+5 more)
tests/: ci_policy.rs  domain.rs  import-node.test.ts  index.ts  repository.rs  setup.ts  ui_density_geometry.rs  ui_empty_states.rs  ui_error_states.rs  ui_geometry.rs  ui_keyboard.rs  ui_operator_walkthrough.rs  ui_typography.rs  ui_visual_contract.rs  ui_visual_truth.rs
web/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
website/: package.json
(+1755 files in other folders)
