[package]
name = "neo-nexus"
version = "2.5.3"
edition = "2021"
license = "MIT"
authors = ["NeoNexus Team"]
description = "Pure Rust native Neo N3 node operations application"

[lib]
name = "neo_nexus"
path = "src/lib.rs"

[[bin]]
name = "neo-nexus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
eframe = "0.33"
egui = "0.33"
ed25519-dalek = "2"
flate2 = "1"
libc = "0.2"
ripemd = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.38.4"
tar = "0.4"
toml = "0.9"
ureq = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
